# ForceFeedback-core-library

./: CMakeLists.txt  Descriptor.txt  FfbEngine.cpp  FfbEngine.h  FfbReportHandler.cpp  FfbReportHandler.h  FfbWheelDescriptor.h  HIDReportType.h  LICENSE  README.md  UserInput.h  ffb.c  ffb.h  ffb_math.c  ffb_math.h
coverage/: CMakeLists.txt
src/: CMakeLists.txt  FfbEngine.cpp  FfbEngine.h  FfbReportHandler.cpp  HIDReportType.h  UserInput.cpp  UserInput.h
test/: CMakeLists.txt  test.cpp
test/helpers/: hidTypesExt.hpp
tests/: CMakeLists.txt
tests/coverage/: CMakeLists.txt
tests/src/: test.cpp
tests/src/helpers/: hidTypesExt.hpp
